# Snake-Game

./: Cargo.toml  README.md
src/: food.rs  game_over.rs  grid.rs  keyboard.rs  main.rs  position.rs  snake.rs
web/: Snake-Game.wasm  index.html  style.css
